syntax = "proto3";

package calculator;
option go_package="./calculator/calculatorpb";

message CalculatorRequest {
  int32 x = 1;
  int32 y = 2;
}

message CalculatorResponse {
  int32 sum = 1;
}

message CalculatorStreamingRequest {
  int32 x = 1;
}

message CalculatorStreamingResponse {
  int32 x = 1;
}

message CalculatorAverageResponse {
  double x = 1;
}

message SquareRootRequest {
  int32 number = 1;
}

message SquareRootResponse {
  double number_root = 1;
}

service CalculatorService {
  // Unary
  rpc Calculate(CalculatorRequest) returns (CalculatorResponse);

  rpc CalculatePrimeStreaming(CalculatorStreamingRequest) returns (stream CalculatorStreamingResponse);

  rpc CalculateAverage(stream CalculatorStreamingRequest) returns (CalculatorAverageResponse);

  rpc CalculateStreamingMax(stream CalculatorStreamingRequest) returns (stream CalculatorStreamingResponse);

  // error handling
  // this RPC will throw an exception if the sent number is negative
  // The error being sent is of type INVALID_ARGUMENT
  rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse);
}